# CrossplatformPracticeWithCmake

./: .gitignore  CMakeLists.txt  CrossPlatformPractice.cpp  Decrypt.bat  Project  build.bat  gen_prj.bat  libs_dep.json  readme.md  repo_config.bat  repo_init.bat
.github/workflows/: linux.yml
build_scripts/: Encrypt.bat  build.bat  repo_config.bat  repo_init.bat
include/: GUIConstructDirector.h  GUIFactory.h  GuiTypes.h  IGUIBuilder.h  IGUIFactory.h  InputParser.h
include/Buttons/: Button.h  ButtonBuilder.h  IButton.h
include/Shapes/: IShape.h  RectangleShape.h
include/common/: .gitignore  Log.h  MessageQueue.h  MessageQueue.inl  Signal.h  Utils.h  WorkerThread.h  WorkerThread.inl  common-utils.h  pch.h  result.h  threading.h  threading.inl
src/: InputParser.cpp  main.cpp
src/Buttons/: ButtonBuilder.cpp
src/Shapes/: RectangleShape.cpp
